--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "@heroui/react": "^2.7.6",
     "axios": "^1.8.4",
     "framer-motion": "^12.7.4",
+    "lodash.debounce": "^4.0.8",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
