--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,7 +17,9 @@
     "paths": {
       "@/*": ["./*"],
       "@components/*": ["./src/components"],
-      "@hooks/*": ["./src/hooks/*"]
+      "@hooks/*": ["src/hooks/*"],
+      "@hooks": ["src/hooks"],
+      "@types/*": ["src/types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
